Bug 36559: (follow-up) Fix To/From z-index

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -4380,6 +4380,9 @@ input.renew {
         border-spacing: 0;
 
         tbody {
+            #to_from {
+                z-index: 999;
+            }
             tr {
                 th,
                 td {
